changing to daemon application

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -27,7 +27,7 @@ remotecreation {
     actor {
       deployment {
         /advancedCalculator {
-          remote = "akka.tcp://WaitingApplication@crick:2552"
+          remote = "akka.tcp://DaemonApplication@crick:2552"
         }
       }
     }
