--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -6,7 +6,7 @@ akka {
 
   remote {
     netty.tcp {
-      hostname = "crick"
+      hostname = java.net.InetAddress.getLocalHost().getHostName()
     }
   }
 
