adding daemon config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,27 @@ calculator {
 }
 //#calculator
 
+
+
+//#daemon
+daemon {
+  actor {
+    provider = "akka.remote.RemoteActorRefProvider"
+  }
+  akka {
+    # LISTEN on tcp port 2552
+    remote.netty.tcp.port = 2552
+  }
+  remote {
+    netty.tcp {
+      hostname = "crick"
+    }
+  }
+  
+}
+//#daemon
+
+
 //#remotelookup
 remotelookup {
   include "common"
