--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -6,7 +6,7 @@ akka {
 
   remote {
     netty.tcp {
-      hostname = java.net.InetAddress.InetAddress.getLocalHost
+      hostname = "127.0.0.0.1"
     }
   }
 
