using scala distributedly

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,59 +1,32 @@
-//#calculator
-calculator {
-  include "common"
-
-  akka {
-    # LISTEN on tcp port 2552
-    remote.netty.tcp.port = 2552
-  }
-}
-//#calculator
-
-
-
 //#daemon
 daemon {
-  actor {
-    provider = "akka.remote.RemoteActorRefProvider"
-  }
   akka {
-    # LISTEN on tcp port 2552
-    remote.netty.tcp.port = 2552
-  }
-  remote {
-    netty.tcp {
-      hostname = "crick"
+	actor {
+    	provider = "akka.remote.RemoteActorRefProvider"
+  	}
+    remote{
+    	netty.tcp {
+    		port = 2552
+    	}
     }
   }
-  
 }
-//#daemon
-
-
-//#remotelookup
-remotelookup {
-  include "common"
-
-  akka {
-    remote.netty.tcp.port = 2553
-  }
-}
-//#remotelookup
 
 //#remotecreation
 remotecreation {
-  include "common"
-
   akka {
-    actor {
+ 	actor {
+    	provider = "akka.remote.RemoteActorRefProvider"
       deployment {
         /advancedCalculator {
-          remote = "akka.tcp://DaemonApplication@crick:2552"
-        }
-      }
-    }
-
-    remote.netty.tcp.port = 2554
-  }
+          remote = "akka.tcp://DaemonApplication@10.2.2.97:2552"
+        	}
+    	}
+ 	}
+    remote{
+    	netty.tcp {
+    		port = 2554
+    		}
+    	}
+ 	}
 }
-//#remotecreation
